Fix: battlemap canvas vertically aligned

--- a/static/layout.css
+++ b/static/layout.css
@@ -597,7 +597,11 @@ div.warning {
 
 div.battlemap {
 	padding-top: 25px;
-	z-index: -1;
+	
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 }
 
 div.battlemap > div#draghint {
